--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,181 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTML Form</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <h1>HTML Form</h1>
-  <script type="text/javascript" src="./main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HTML Form</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="POST">
+      <fieldset id="field">
+        <legend>
+        Personal information
+        </legend>
+        <div class="input">
+          <label for="surname">Surname:</label>
+          <input
+            type="text"
+            id="surname"
+            name="surname"
+            autocomplete="off"
+            required
+          >
+        </div>
+        <div class="input">
+          <label for="name">Name:</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            autocomplete="off"
+            required
+          >
+        </div>
+        <div class="input">
+          <label for="age">How old are You?</label>
+          <input
+            type="number"
+            id="age"
+            name="age"
+            min="12"
+            max="120"
+            value="12"
+          >
+        </div>
+        <div class="input">
+          <label for="date-of-birth">Full date of birth:</label>
+          <input
+            type="date"
+            id="date-of-birth"
+            name="date-of-birth"
+            required
+          >
+        </div>
+        <div class="input">
+          <label for="agreement">I accept the term of the agreement</label>
+          <input
+            type="checkbox"
+            id="agreement"
+            name="agreement"
+            required
+          >
+        </div>
+      </fieldset>
+      <fieldset class="field">
+        <legend>
+          Registration
+        </legend>
+        <div class="input">
+          <label for="email">E-mail:</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="email@example.com"
+            required
+            autocomplete="off"
+          >
+        </div>
+        <div class="input">
+          <label for="password">Password:</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            minlength="8"
+            required
+            autocomplete="off"
+          >
+        </div>
+      </fieldset>
+      <fieldset class="field">
+        <legend>
+          An interesting fact about you!
+        </legend>
+        <div class="input">
+          <span>Do you love cats?</span>
+          <input
+            type="radio"
+            id="yes"
+            name="love-cats"
+          >
+          <label for="yes">Yes</label>
+          <input
+            type="radio"
+            id="no"
+            name="love-cats"
+          >
+          <label for="no">No</label>
+        </div>
+        <div class="input">
+          <label for="color">What is your favorite color?</label>
+          <input
+            type="color"
+            id="color"
+            name="color"
+          >
+        </div>
+        <div class="input">
+          <label for="go-to-sleep">What time do you go to bed?</label>
+          <input
+            type="time"
+            id="go-to-sleep"
+            name="go-to-sleep"
+            step="2"
+          >
+        </div>
+        <div class="input">
+          <label for="fav-car">What are your favorite brand of cars?</label>
+          <select
+            id="fav-car"
+            name="cars"
+            multiple
+          >
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </div>
+        <div class="input">
+          <label for="our-work">How do you rate our work?</label>
+          <input
+            type="range"
+            min="0"
+            max="100"
+            step="1"
+            value="0"
+            id="our-work"
+            name="our-work"
+          >
+        </div>
+      </fieldset>
+      <fieldset class="field">
+        <legend>
+          Additional info
+        </legend>
+        <div class="input">
+          <label for="comments">Comments:</label>
+          <textarea id="comments" name="comments"></textarea>
+        </div>
+        <div class="input">
+          <span>Would you recommend us?</span>
+          <select>
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </div>
+      </fieldset>
+    </form>
+    <button
+      id ="button"
+      type="submit"
+      onsubmit="onSubmit()">Submit
+    </button>
+    <script type="text/javascript" src="./main.js"></script>
+  </body>
 </html>
